# engine3D-cpp

./: CMakeLists.txt
assets/shaders/: default.frag
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader.h
src/core/: camera.cpp  camera.h  mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  shader.cpp  timer.cpp  timer.h  window.cpp  window.h
